<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cc.catalogo.Datos_item"
    android:id="@+id/datos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:hint="@string/Nombre"
        android:id="@+id/textView5"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="59dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvNombre"
        android:layout_marginTop="17dp"
        android:hint="@string/Marca"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignStart="@+id/tvModelo"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="18dp"
        android:hint="@string/Modelo"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/tvNombre"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="16dp"
        android:hint="@string/Version"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignStart="@+id/tvModelo"
        android:layout_marginStart="48dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="23dp"
        android:hint="@string/Tamaño"
        android:id="@+id/textView9"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tvTamano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignStart="@+id/tvVersion"
        android:textColor="@android:color/black"/>

    <ImageView
        android:id="@+id/Img"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_alignStart="@+id/tvNombre"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="45dp" />
</RelativeLayout>
